[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/sfx/Alarm_Loop_01.wav" type="AudioStream" id=1]
[ext_resource path="res://MegaSpaceMissile.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/Laser_01.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/Laser_08.wav" type="AudioStream" id=4]
[ext_resource path="res://MegaSpaceMissile.shader" type="Shader" id=5]

[sub_resource type="SphereMesh" id=1]
radius = 5.0
height = 10.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )
shader_param/impact_site = Vector3( 5, 0, 0 )

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 0.972656, 0.19769, 0.0455933, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.993671, 0.0113636 ), -2.37743, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 1
emission_sphere_radius = 3.0
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[sub_resource type="ShaderMaterial" id=29]
shader = ExtResource( 5 )
shader_param/impact_site = Vector3( 0.8, 0, 0 )

[sub_resource type="SphereMesh" id=28]
material = SubResource( 29 )

[sub_resource type="SphereShape" id=4]
radius = 5.0

[sub_resource type="Animation" id=5]
resource_name = "existance"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.001, 0.001, 0.001 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Curve" id=19]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -1.38507, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=20]
curve = SubResource( 19 )

[sub_resource type="ParticlesMaterial" id=21]
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
linear_accel = 15.04
damping = 15.0
scale = 0.4
scale_curve = SubResource( 20 )

[sub_resource type="ShaderMaterial" id=25]
shader = ExtResource( 5 )
shader_param/impact_site = Vector3( 3, 0, 0 )

[sub_resource type="SphereMesh" id=26]
material = SubResource( 25 )
radius = 3.0
height = 6.0

[node name="MegaSpaceMissile" type="KinematicBody" groups=[
"missile",
]]
collision_layer = 2049
collision_mask = 2049
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="Particles" type="Particles" parent="MeshInstance"]
amount = 50
local_coords = false
process_material = SubResource( 10 )
draw_pass_1 = SubResource( 28 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 4 )

[node name="Alarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Existance" type="AnimationPlayer" parent="."]
anims/existance = SubResource( 5 )

[node name="Death" type="Spatial" parent="."]

[node name="DeathParticles" type="Particles" parent="Death"]
emitting = false
amount = 100
one_shot = true
explosiveness = 0.94
process_material = SubResource( 21 )
draw_pass_1 = SubResource( 26 )

[node name="DeathTimer" type="Timer" parent="Death"]
process_mode = 0
one_shot = true

[node name="DeathSound" type="AudioStreamPlayer" parent="Death"]
stream = ExtResource( 4 )
volume_db = -6.0

[node name="Neutralize" type="Spatial" parent="."]

[node name="NeutralizeParticles" type="Particles" parent="Neutralize"]
emitting = false
amount = 100
one_shot = true
explosiveness = 0.94
process_material = SubResource( 21 )
draw_pass_1 = SubResource( 26 )

[node name="NeutralizeTimer" type="Timer" parent="Neutralize"]
process_mode = 0
one_shot = true

[node name="NeutralizeSound" type="AudioStreamPlayer" parent="Neutralize"]
stream = ExtResource( 3 )
volume_db = -6.0
[connection signal="timeout" from="Death/DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="Neutralize/NeutralizeTimer" to="." method="_on_NeutralizeTimer_timeout"]
[connection signal="finished" from="Neutralize/NeutralizeSound" to="." method="_on_NeutralizeSound_finished"]
